# compdb

./: .gitignore  flake.nix  pyproject.toml
compdb/: cli.py  includedb.py
compdb/complementer/: headerdb.py
