[tool.poetry]
name = "compdb"
version = "0.1.0"
description = ""
authors = ["Luis-Hebendanz <luis.nixos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
#flake8 = "*"
#pep8-naming = "*"
#readme-renderer = "*"
#tox = "*"
#yapf = "*"
#hatchling = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
